--- a/app/views/wall/write.html.erb
+++ b/app/views/wall/write.html.erb
@@ -2,7 +2,7 @@
 
 <div style="background-color:#e9eaed;">
 	<h1>Write post</h1>
-	<form action="/wall/wirte_complete" method="post">
+	<form action="/wall/write_complete" method="post">
 		Name: <input type="text" name="writer" placeholder="What's your name?"><br>
 		Content: <br>
 		<textarea name="content" cols="40" rows=5" placeholder="Write something..."></textarea>
