타임라인 글 삭제 페이지 만들기

--- a/app/views/wall/edit.html.erb
+++ b/app/views/wall/edit.html.erb
@@ -2,7 +2,7 @@
 
 <div style="background-color:#e9eaed;">
 	<h1>Edit Post</h1>
-	<form actio="/wall/edit_complete" method="post">
+	<form action="/wall/edit_complete" method="post">
 		<input type="hidden" name="id" value="<%= @post_edit.id%>">
 		Name: <input type="text" name="writer_edit" value="<%= @post_edit.name %>"><br>
 		Content: <br>
